Improve list of reports
Now links directly to report file so it may be read in the browser.

--- a/views/index.pug
+++ b/views/index.pug
@@ -10,4 +10,6 @@ html
     else
       ul
         each report in reports
-          li Report: #{report}
+          li Report:&nbsp;
+            a(href="/" + report)
+              code #{report}
